fixed button visibility issues (z-index) on quickbuttons

--- a/src/components/shared/QuickButtons.module.scss
+++ b/src/components/shared/QuickButtons.module.scss
@@ -7,6 +7,9 @@
   justify-content: space-evenly;
   align-items: center;
 }
+.row * {
+  z-index: 3;
+}
 .pets {
   display: block;
   width: auto;
